add two section navigation add video

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения Анастасия</title>
-
     <link rel="stylesheet" href="styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="hello">
+<header class="header">
+  <div class="header-content">
+    <div class="header-section">
+<h1 class="title-lead">Когнитивные<br>
+  искажения <br>
+<span class="title-lead-span">в программировании</span></h1>
+    <img src="src/img/main.png" height="525" alt="человечек с компьютером">
+    </div>
+  <div class= "content-paragraf">
+  <p class="content-paragraf-1">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей
+    продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем
+    малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+    <div class="content-paragraf-div">
+  <p class="content-paragraf-2">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной
+    потере продуктивности, багам и бесконечному разочарованию.
+    Если мы сможем минимизировать воздействие одного или нескольких из
+    этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+    <a href="#link" class="header-link">Подробнее</a>
+    </div>
+  </div>
+  </div>
+</header>
+<main class="Content" >
+  <div class="content-div">
+    <div class="content-width content-center">
+<section class="video-section" id="preview-image">
+  <div class="video-section-div">
+<h2 class="video-section-title">Что же это такое,<br>
+<span>когнитивные искажения?</span></h2>
+    <p class="video-title">Что такое когнитивные искажения. Petrovna Channel</p>
+    <div class="video-position">
+    <video class="preview-video" src="https://www.youtube.com/watch?feature=shared&v=jie9AizBqss" width="919" height="517" controls></video>
+    </div>
+    </div>
+</section>
+    </div>
+    <div class="background-cognitive-list">
+ <section class="navigation content-width" >
+   <ul class="cognitiv-list-list">
+     <li class="cognitive-list-items no-padding">
+     <h2 class="cognitive-list-title" id="link">5 когнитивных искажений
+       <span>о существовании которых стоит помнить</span></h2>
+     </li>
+     <li class="cognitive-list-items">
+       <div class="number-cognitive">1</div>
+       <h3 class="cognitive-list-items-title">Эффект ИКЕА</h3>
+       <p class="cognitive-list-items-description">Вы переоцениваете собственные решения, и,
+         как следствие, недооцениваете решения других.</p>
+     </li>
+     <li class="cognitive-list-items">
+       <div class="number-cognitive">2</div>
+       <h3 class="cognitive-list-items-title">Преждевременная оптимизация</h3>
+       <p class="cognitive-list-items-description">Вы оптимизируете что-то
+         задолго до того, как в этом появляется необходимость.</p>
+     </li>
+     <li class="cognitive-list-items">
+       <div class="number-cognitive">3</div>
+       <h3 class="cognitive-list-items-title">Искажение новизны</h3>
+       <p class="cognitive-list-items-description">Вы даёте более высокую оценку тем событиям, которые
+         произошли недавно, и недооцениваете более старые. </p>
+     </li>
+     <li class="cognitive-list-items">
+       <div class="number-cognitive">4</div>
+       <h3 class="cognitive-list-items-title">Гиперболическое обесценивание</h3>
+       <p class="cognitive-list-items-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете
+         более крупную, недоступную сейчас, но доступную в будущем.</p>
+     </li>
+     <li class="cognitive-list-items">
+       <div class="number-cognitive">5</div>
+       <h3 class="cognitive-list-items-title">Ошибка планирования</h3>
+       <p class="cognitive-list-items-description">Неправильно рассчитывать время необходимое для завершения задачb.</p>
+     </li>
+   </ul>
+ </section>
+    </div>
+  </div>
+</main>
+<footer class="cognitive-footer">
 
+</footer>
+</div>
 </body>
 </html>
