--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,52 @@
    </ul>
  </section>
     </div>
+    <div class="backgrond-ikea-effect-1">
+    <div class="background-ikea-effect-2 color-background">
+      <section class="ikea-effect cards content-width content-color">
+        <div class="cards-title-img">
+        <div class="img-div">
+          <img src="src/img/1.png" width="578" height="434" alt="человечки за компьютером">
+        </div>
+          <div class="card-title">
+            <p>Когнитивные искажения</p>
+            <h2 >Эффект ИКЕА</h2>
+            <p class="card-title-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+          </div>
+        </div>
+        <div class="card-description">
+          <h3 class="card-description-title color-1">Как проявляется</h3>
+          <div class="card-description-paragraf">
+          <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+          <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+    </div>
+    <div class="background-premature-optimization">
+      <div class="content-color-white">
+        <section class="cards content-width id="premature-optimization">
+          <div class="cards-title-img ">
+            <div class="card-title color-paragraf-wite">
+              <p class="card-title-color-paragraf">Когнитивные искажения</p>
+              <h2>Преждевременная оптимизация</h2>
+              <p class="card-title-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+            </div>
+            <div class="img-div">
+              <img src="src/img/rocket.png" width="578" height="434" alt="человечки за компьютером">
+            </div>
+          </div>
+          <div class="card-description color-paragraf-wite">
+            <h3 class="card-description-title color-2">Как проявляется</h3>
+            <div class="card-description-paragraf">
+              <p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+              <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </main>
 <footer class="cognitive-footer">
