--- a/src/index.html
+++ b/src/index.html
@@ -55,40 +55,50 @@
        <span>о существовании которых стоит помнить</span></h2>
      </li>
      <li class="cognitive-list-items">
-       <div class="number-cognitive">1</div>
-       <h3 class="cognitive-list-items-title">Эффект ИКЕА</h3>
-       <p class="cognitive-list-items-description">Вы переоцениваете собственные решения, и,
+       <a href="#ikea-effect">
+        <div class="number-cognitive">1</div>
+        <h3 class="cognitive-list-items-title">Эффект ИКЕА</h3>
+        <p class="cognitive-list-items-description">Вы переоцениваете собственные решения, и,
          как следствие, недооцениваете решения других.</p>
+       </a>
      </li>
      <li class="cognitive-list-items">
+       <a href="#premature-optimization">
        <div class="number-cognitive">2</div>
        <h3 class="cognitive-list-items-title">Преждевременная оптимизация</h3>
        <p class="cognitive-list-items-description">Вы оптимизируете что-то
          задолго до того, как в этом появляется необходимость.</p>
+       </a>
      </li>
      <li class="cognitive-list-items">
+       <a href="#distortion-of-novelty">
        <div class="number-cognitive">3</div>
        <h3 class="cognitive-list-items-title">Искажение новизны</h3>
        <p class="cognitive-list-items-description">Вы даёте более высокую оценку тем событиям, которые
          произошли недавно, и недооцениваете более старые. </p>
+       </a>
      </li>
      <li class="cognitive-list-items">
+       <a href="#hyperbolic-depreciation">
        <div class="number-cognitive">4</div>
        <h3 class="cognitive-list-items-title">Гиперболическое обесценивание</h3>
        <p class="cognitive-list-items-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете
          более крупную, недоступную сейчас, но доступную в будущем.</p>
+       </a>
      </li>
      <li class="cognitive-list-items">
+       <a href="#errors-in-planning">
        <div class="number-cognitive">5</div>
        <h3 class="cognitive-list-items-title">Ошибка планирования</h3>
        <p class="cognitive-list-items-description">Неправильно рассчитывать время необходимое для завершения задачb.</p>
+       </a>
      </li>
    </ul>
  </section>
     </div>
-    <div class="backgrond-ikea-effect-1">
+    <div class="lead-background">
     <div class="background-ikea-effect-2 color-background">
-      <section class="ikea-effect cards content-width content-color">
+      <section class="cards content-width content-color" id="ikea-effect">
         <div class="cards-title-img">
         <div class="img-div">
           <img src="src/img/1.png" width="578" height="434" alt="человечки за компьютером">
@@ -109,9 +119,9 @@
       </section>
     </div>
     </div>
-    <div class="background-premature-optimization">
+    <div class="lead-background-2">
       <div class="content-color-white">
-        <section class="cards content-width id="premature-optimization">
+        <section class="cards content-width" id="premature-optimization">
           <div class="cards-title-img ">
             <div class="card-title color-paragraf-wite">
               <p class="card-title-color-paragraf">Когнитивные искажения</p>
@@ -132,10 +142,99 @@
         </section>
       </div>
     </div>
+    <div class="lead-background">
+      <div class="color-background">
+        <section class="cards content-width content-color" id="distortion-of-novelty">
+          <div class="cards-title-img">
+            <div class="img-div">
+              <img src="src/img/3.png" width="578" height="434" alt="человечки за компьютером">
+            </div>
+            <div class="card-title">
+              <p>Когнитивные искажения</p>
+              <h2 >Искажение новизны</h2>
+              <p class="card-title-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+            </div>
+          </div>
+          <div class="card-description">
+            <h3 class="card-description-title color-1">Как проявляется</h3>
+            <div class="card-description-paragraf">
+              <p> Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+              <p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+  <div class="lead-background-2">
+    <div class="content-color-white">
+      <section class="cards content-width" id="hyperbolic-depreciation">
+        <div class="cards-title-img ">
+          <div class="card-title color-paragraf-wite">
+            <p class="card-title-color-paragraf">Когнитивные искажения</p>
+            <h2>Гиперболическое обесценивание</h2>
+            <p class="card-title-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+          </div>
+          <div class="img-div">
+            <img src="src/img/4.png" width="578" height="434" alt="человечки за компьютером">
+          </div>
+        </div>
+        <div class="card-description color-paragraf-wite">
+          <h3 class="card-description-title color-2">Как проявляется</h3>
+          <div class="card-description-paragraf">
+            <p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+            <p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  <div class="lead-background">
+    <div class="color-background">
+      <section class="cards content-width content-color" id="errors-in-planning">
+        <div class="cards-title-img">
+          <div class="img-div">
+            <img src="src/img/5.png" width="578" height="434" alt="человечки за компьютером">
+          </div>
+          <div class="card-title">
+            <p>Когнитивные искажения</p>
+            <h2 >Ошибка планирования</h2>
+            <p class="card-title-description">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+          </div>
+        </div>
+        <div class="card-description">
+          <h3 class="card-description-title color-1">Как проявляется</h3>
+          <div class="card-description-paragraf">
+            <p> Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+            <p>Это отлично выражается в старом афоризме:
+              Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
   </div>
 </main>
 <footer class="cognitive-footer">
-
+<div class="cognitive-footer-div content-width">
+  <div class="footer-forma">
+    <p class="footer-paragraf-approval">Хотите узнать больше?<br>Подпишитесь на обновления
+    </p>
+    <form>
+      <label for="Email" class="form-label">Электронная почта</label>
+      <div class="form-input-button">
+      <input type="email" name="Email" id="Email" placeholder="Ваша электронная почта">
+      <button type="submit" class="form-button"></button>
+      </div>
+      <p class="form-podpis">Подписываясь, вы принимаете <a href="#" class="rulls-service">правила сервиса</a></p>
+    </form>
+  </div>
+<div class="contact-footer">
+  <p>© 2020 Константин Константинопольский</p>
+  <p>По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b">Yash Ranadive Cognitive Biases in Programming</a></p>
+  <a href="https://ru.hexlet.io/">Курсы программирования Hexlet</a>
+</div>
+</div>
 </footer>
 </div>
 </body>
