--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
       <section class="cards content-width content-color" id="ikea-effect">
         <div class="cards-title-img">
         <div class="img-div">
-          <img src="src/img/1.png" width="578" height="434" alt="человечки за компьютером">
+          <img src="/src/img/1.png" width="578" height="434" alt="человечки за компьютером">
         </div>
           <div class="card-title">
             <p>Когнитивные искажения</p>
@@ -129,7 +129,7 @@
               <p class="card-title-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
             </div>
             <div class="img-div">
-              <img src="src/img/rocket.png" width="578" height="434" alt="человечки за компьютером">
+              <img src="/src/img/rocket.png" width="578" height="434" alt="человечки за компьютером">
             </div>
           </div>
           <div class="card-description color-paragraf-wite">
@@ -147,7 +147,7 @@
         <section class="cards content-width content-color" id="distortion-of-novelty">
           <div class="cards-title-img">
             <div class="img-div">
-              <img src="src/img/3.png" width="578" height="434" alt="человечки за компьютером">
+              <img src="/src/img/3.png" width="578" height="434" alt="человечки за компьютером">
             </div>
             <div class="card-title">
               <p>Когнитивные искажения</p>
@@ -176,7 +176,7 @@
             <p class="card-title-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
           </div>
           <div class="img-div">
-            <img src="src/img/4.png" width="578" height="434" alt="человечки за компьютером">
+            <img src="/src/img/4.png" width="578" height="434" alt="человечки за компьютером">
           </div>
         </div>
         <div class="card-description color-paragraf-wite">
@@ -194,7 +194,7 @@
       <section class="cards content-width content-color" id="errors-in-planning">
         <div class="cards-title-img">
           <div class="img-div">
-            <img src="src/img/5.png" width="578" height="434" alt="человечки за компьютером">
+            <img src="/src/img/5.png" width="578" height="434" alt="человечки за компьютером">
           </div>
           <div class="card-title">
             <p>Когнитивные искажения</p>
